--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.20.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "prettier": "^1.19.1",
@@ -21,12 +23,13 @@
     "start": "node server.js",
     "watch": "nodemon server.js",
     "seed": "node ./seeds/index.js",
-    "test": "eslint .; exit 0 "
+    "test": "eslint .; exit 0 ",
+    "heroku-postbuild": "npm run seed"
   },
   "repository": {
     "type": "git",
     "url": "git@work.github.com:arosenkranz/blog-api.git"
   },
-  "author": "[",
+  "author": "",
   "license": "ISC"
 }
