--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node ./seeds/index.js",
+    "seed": "node ./seeds/seeds.js",
     "test": "eslint .; exit 0 "
   },
   "repository": {
